# noventis

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  auto.md  environment.yml  examples.ipynb  examples2.ipynb  project-folder.txt  pyproject.toml  requirement.txt  requirements.txt  setup.cfg  setup.py
docs/: auto.md  data_cleaner.md  eda_auto.md  predictor.md
example/: imputer_usage.ipynb
examples/: auto.ipynb  data_cleaner_example.ipynb  dummy_classification_churn.csv  dummy_regression_house_price.csv  eda_auto.ipynb  eda_auto2.ipynb  encoder_example.ipynb  encoding.ipynb  hasil_analisis_model.html  imputer_example.ipynb  imputer_usage_pt2.ipynb  imputing.ipynb  install.ipynb  main_test.ipynb  outlier_handler_example.ipynb  outlier_handler_usage.ipynb  outlier_handling.ipynb  predictor.ipynb  predictor_auto.ipynb  predictor_auto_example.ipynb  predictor_manual.ipynb  predictor_manual_cleaner_example2.ipynb  predictor_manual_example.ipynb  predictor_manual_example2.ipynb  scaler_example.ipynb  scaling.ipynb  test_model.pkl  test_predictor.ipynb
examples/Full_Run_Churn_Analysis/: best_automl_model.pkl  best_model.pkl  best_model_without_automl.pkl  model_comparison_report.txt  model_summary.txt
examples/Hasil_Churn/: best_automl_model.pkl  best_model.pkl  model_comparison_report.txt  model_summary.txt
examples/Hasil_churn/: best_model.pkl  model_comparison_report.txt  model_summary.txt
examples/Hasil_regresi/: model_comparison_report.txt  model_summary.txt
examples/Hasil_saleprice/: best_model.pkl  model_comparison_report.txt  model_summary.txt
examples/Noventis_Results/: Noventis_AutoML_Report.html  best_automl_model.pkl  best_model.pkl  best_model_without_automl.pkl  model_comparison_report.txt  model_summary.txt
examples/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
examples/catboost_info/learn/: events.out.tfevents
examples/manual_run_results/run_20251001_154149/reports/: analysis_report.html
examples/manual_run_results/run_20251008_154118/reports/: analysis_report.html
examples/manual_run_results/run_20251008_155808/reports/: analysis_report.html
examples/manual_run_results/run_20251008_161103/reports/: analysis_report.html
examples/manual_run_results/run_20251008_162447/reports/: analysis_report.html
examples/manual_run_results/run_20251008_185311/reports/: analysis_report.html
examples/manual_run_results/run_20251008_185848/reports/: analysis_report.html
examples/noventis_result_automl+givenModels_compare/: model_comparison_report.txt
examples/noventis_result_automl+givenModels_explain/: model_summary.txt
examples/noventis_result_automl+given_models_explain+compare/: best_model.pkl  model_comparison_report.txt
examples/results/: best_automl_model.pkl  model_summary.txt
noventis/: __init__.py
noventis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
noventis/cleaner/: null-handling.py  null_handling.py  outlier-handling.py
noventis/cleaner[unfix]/: outlier-handling.py
noventis/data_cleaner/: Encoder.ipynb  OutlierHandler.py  __init__.py  auto.py  data_quality.py  encoding.py  encoding_summary.txt  imputing.py  null_handling.py  orchestrator.py  outlier_handling.py  scaling.py  scalling.py
noventis/eda_auto/: __init__.py  eda_auto.py
noventis/eda_auto_coba/: SWEETVIZ_REPORT.html  coba_dtale.ipynb  coba_sweetviz.ipynb  coba_sweetviz.py  titanic_report.html
noventis/notebook/: null_handling.ipynb  outlier_handling.ipynb
noventis/predictor/: __init__.py  auto.py  manual.py
noventis/utils/: plotting.py  template.py
