[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noventis"
version = "0.1.0"
description = "A comprehensive AutoML library for automated machine learning workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ahmad Nafim", email = "your-email@example.com"}
]
maintainers = [
    {name = "Ahmad Nafim", email = "your-email@example.com"}
]
keywords = [
    "machine learning",
    "automl",
    "automated machine learning",
    "data science",
    "artificial intelligence",
    "data cleaning",
    "feature engineering",
    "eda",
    "exploratory data analysis",
    "predictor",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "catboost",
    "optuna",
    "shap",
    "flaml"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

dependencies = [
    # Data Manipulation & Analysis
    "pandas>=1.3.0,<2.0.0",
    "numpy>=1.21.0,<1.24.0",
    "scipy>=1.7.0,<1.11.0",
    
    # Visualization
    "matplotlib>=3.4.0,<3.8.0",
    "seaborn>=0.11.0,<0.13.0",
    "ipython>=7.30.0,<8.13.0",
    
    # Machine Learning - Scikit-learn
    "scikit-learn>=1.0.0,<1.4.0",
    
    # Statistical Models
    "statsmodels>=0.13.0,<0.15.0",
    
    # Automated ML & Optimization
    "optuna>=3.0.0,<3.4.0",
    "shap>=0.41.0,<0.45.0",
    "flaml>=2.0.0,<2.2.0",
    
    # Gradient Boosting Libraries
    "xgboost>=1.5.0,<1.8.0",
    "lightgbm>=3.3.0,<4.2.0",
    "catboost>=1.0.0,<1.3.0",
    
    # Category Encoders
    "category_encoders>=2.5.0,<2.7.0",
    
    # Utilities
    "joblib>=1.1.0,<1.4.0",
    "imbalanced-learn>=0.9.0,<0.11.0",
    "Jinja2>=3.0.0,<4.0.0",

    # Jupyter Notebook Support
    "nbformat>=5.5.0,<6.0.0",
]



[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
]
imbalanced = [
    "imbalanced-learn>=0.9.0",
]
all = [
    "noventis[dev,docs,imbalanced]",
]

[project.urls]
Homepage = "https://github.com/yourusername/noventis"
Documentation = "https://noventis.readthedocs.io"
Repository = "https://github.com/yourusername/noventis"
"Bug Tracker" = "https://github.com/yourusername/noventis/issues"
Changelog = "https://github.com/yourusername/noventis/blob/main/CHANGELOG.md"

[tool.setuptools]
packages = ["noventis", "noventis.core", "noventis.data_cleaner", "noventis.eda_auto", "noventis.predictor"]

[tool.setuptools.package-data]
noventis = ["asset/*", "py.typed"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | __pycache__
  | examples
  | dataset_for_examples
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=noventis --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
exclude = ["examples", "dataset_for_examples"]