[metadata]
name = noventis
version = 0.1.0
author = Ahmad Nafi Mubarok
author_email = youremail@example.com
description = A Python library for data cleaning, exploratory data analysis, and machine learning utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/username/noventis
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.20
    pandas>=1.3
    scikit-learn>=1.0
    matplotlib>=3.4
    seaborn>=0.11

[options.extras_require]
dev =
    pytest>=6.0
    black
    flake8
    mypy
docs =
    sphinx
    sphinx-rtd-theme

[options.packages.find]
where = .
exclude =
    tests

[tool:pytest]
testpaths = tests
