[metadata]
name = noventis
version = 0.1.0
author = bccfilkom
author_email = bccfilkom
description = A Python library for data cleaning, exploratory data analysis, and machine learning utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bccfilkom/noventis
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pandas>=1.3.0,<2.0.0
    numpy>=1.21.0,<1.24.0
    scipy>=1.7.0,<1.11.0
    matplotlib>=3.4.0,<3.8.0
    seaborn>=0.11.0,<0.13.0
    ipython>=7.30.0,<8.13.0
    scikit-learn>=1.0.0,<1.4.0
    statsmodels>=0.13.0,<0.15.0
    optuna>=3.0.0,<3.4.0
    shap>=0.41.0,<0.45.0
    flaml>=2.0.0,<2.2.0
    xgboost>=1.5.0,<1.8.0
    lightgbm>=3.3.0,<4.2.0
    catboost>=1.0.0,<1.3.0
    category_encoders>=2.5.0,<2.7.0
    joblib>=1.1.0,<1.4.0
    imbalanced-learn>=0.9.0,<0.11.0

[options.extras_require]
dev =
    pytest>=6.0
    black
    flake8
    mypy
docs =
    sphinx
    sphinx-rtd-theme

[options.packages.find]
where = .
exclude =
    tests

[tool:pytest]
testpaths = tests
